--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <li><a class="active-link" href="index.html">HOME</a></li>
             <li><a href="page/about.html">ABOUT US</a></li>
             <li><a href="page/contact.html">CONTACT US</a></li>
-            <a href=""><i class="fa-sape fa-solid fa-bars"></i></a>
         </ul>
     </nav>
     <div class="container">
@@ -119,8 +118,8 @@
 <footer>
     <div class="footer">
         <div class="logo-footer">
-            <img class="img-footer" src="image/footer.png" alt="">
-            <p>Provide disadvantaged young people with access to quality education in the field of Information and
+            <img class="img-footer" src="../image/logo.png" alt="">
+            <p class="footer-caption">Provide disadvantaged young people with access to quality education in the field of Information and
                 Communication Technology (ICT).</p>
         </div>
         <div class="about-us">
@@ -132,19 +131,18 @@
             </ul>
         </div>
         <div class="quick-link">
-            <h3>Quick Link</h3>
+            <h4>Quick Link</h4>
             <ul>
-                <li><a class="active-link" href="index.html">HOME</a></li>
-                <li><a href="page/about.html">ABOUT</a></li>
-                <li><a href="page/contact.html">CONTACT</a></li>
+                <li><a class="active link" href="index.html">HOME</a></li>
+                <li><a class="active" href="page/about.html">ABOUT</a></li>
+                <li><a class="active" href="page/contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="contact-us">
-            <h3>Contact</h3>
-            <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i> BP 511 St. 371 Phum Tropeang Chhuk
-                (Borey Sorla) Sangkat Tek Thla, Khan Sen Sok Phnom Penh CAMBODIA</p>
-            <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i>: +855 23 99 55 00</p>
-            <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>: info.cambodia@passerellesnumeriques.org</p>
+            <h4>Contact</h4>
+            <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>BP 511 St. 371 Phum Tropeang Chhuk (Borey Sorla) Sangkat Tek Thla, Khan Sen SokPhnom Penh CAMBODIA</p>
+            <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i>:+855 23 99 55 00</p>  
+            <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>:info.cambodia@passerellesnumeriques.org</p> 
         </div>
     </div>
     <hr>
@@ -152,8 +150,44 @@
         <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
         <i class="fa-brands fa-instagram" style="color: #f7f7f7;"></i>
         <i class="fa-brands fa-telegram" style="color: #fcfcfc;"></i>
-        <i class="fa-solid fa-envelope" style="color: #ffffff;"></i>
+        <p class="new-footer">Contact with us to get information</p>
     </div>
 </footer>
-
+    <div class="footer">
+        <div class="logo-footer">
+            <img class="img-footer" src="./image/logo.png" alt="">
+            <p class="caption">Provide disadvantaged young people with access to quality education in the field of Information and
+                Communication Technology (ICT).</p>
+        </div>
+        <div class="about-us">
+            <ul>
+                <li>Mission</li>
+                <li>Valuue</li>
+                <li>History</li>
+                <li>Clubs</li>
+            </ul>
+        </div>
+        <div class="quick-link">
+            <h3>Quick Link</h3>
+            <ul>
+                <li><a class="active link" href="index.html">HOME</a></li>
+                <li><a class="active" href="page/about.html">ABOUT</a></li>
+                <li><a class="active" href="page/contact.html">CONTACT</a></li>
+            </ul>
+        </div>
+        <div class="contact-us">
+            <h3>Contact</h3>
+            <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>BP 511 St. 371 Phum Tropeang Chhuk (Borey Sorla) Sangkat Tek Thla, Khan Sen SokPhnom Penh CAMBODIA</p>
+            <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i>:+855 23 99 55 00</p>  
+            <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>:info.cambodia@passerellesnumeriques <br>.org</p> 
+        </div>
+    </div>
+    <hr>
+    <div class="media">
+        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-instagram" style="color: #f7f7f7;"></i>
+        <i class="fa-brands fa-telegram" style="color: #fcfcfc;"></i>
+        <p class="new-footer">Contact with us to get information</p>
+    </div>
+</footer>
 </html>
