--- a/index.html
+++ b/index.html
@@ -13,14 +13,34 @@
 
 <body>
     <nav>
+        <img src="../image/logo.png" class="logo" alt>
+        <ul>
+            <li class="activlink"><a href="index.html">HOME</a></li>
+            <li><a href="page/about.html">ABOUT US</a></li>
+            <li><a href="page/contact.html">CONTACT US</a></li>
+                                
+            <div class="dropstart">
+                <i class="fa-sape fa-solid fa-bars"></i>
+             <div class="dropdown-menus">
+               <a href="index.html" class="dropdown-items">HOME</a>
+               <div class="dropdown-dividers"></div>
+               <a href="page/about.html" class="dropdown-items">ABOUT</a>
+               <div class="dropdown-dividers"></div>
+               <a href="page/contact.html" class="dropdown-items">CONTACT</a>
+              
+             </div>
+           </div>
+        </ul>
+    </nav>
+    <!-- <nav>
         <img src="image/logo.png" class="logo" alt="">
         <ul>
             <li><a class="active-link" href="index.html">HOME</a></li>
             <li><a href="page/about.html">ABOUT US</a></li>
             <li><a href="page/contact.html">CONTACT US</a></li>
         </ul>
-    </nav>
-    <div class="container">
+    </nav> -->
+     <div class="container">
         <div class="color-background">
             <div class="background">
                 <h2>Passerelles Numériques Cambodia</h2>
@@ -33,7 +53,7 @@
                     development program.
                 </p>
             </div>
-        </div>
+        </div> 
         <div class="about">
             <img class="left" src="/image/home/school.png" alt="">
             <div class="img-right">
@@ -114,42 +134,44 @@
             <img class="graduate-right" src="image/home/job-right.png" alt="">
         </div>
     </div>
+    <footer>
+        <div class="footer">
+            <div class="logo-footer">
+                <img class="img-footer" src="../image/logo.png" alt="">
+                <p class="footer-caption">Provide disadvantaged young people with access to quality education in the field of Information and
+                    Communication Technology (ICT).</p>
+            </div>
+            <div class="about-us">
+                <ul>
+                    <li> Mission</li>
+                    <li>Valuue</li>
+                    <li>History</li>
+                    <li>Clubs</li>
+                </ul>
+            </div>
+            <div class="quick-link">
+                <h4>Quick Link</h4>
+                <ul>
+                    <li><a class="active link" href="index.html">HOME</a></li>
+                    <li><a class="active" href="page/about.html">ABOUT</a></li>
+                    <li><a class="active" href="page/contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="contact-us">
+                <h4>Contact</h4>
+                <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>BP 511 St. 371 Phum Tropeang Chhuk (Borey Sorla) Sangkat Tek Thla, Khan Sen SokPhnom Penh CAMBODIA</p>
+                <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i>:+855 23 99 55 00</p>  
+                <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>:info.cambodia@passerellesnumeriques.org</p> 
+            </div>
+        </div>
+        <hr>
+        <div class="media">
+            <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+            <i class="fa-brands fa-instagram" style="color: #f7f7f7;"></i>
+            <i class="fa-brands fa-telegram" style="color: #fcfcfc;"></i>
+            <p class="new-footer">Contact with us to get information</p>
+        </div>
+    </footer>
 </body>
-<footer>
-    <div class="footer">
-        <div class="logo-footer">
-            <img class="img-footer" src="../image/logo.png" alt="">
-            <p class="footer-caption">Provide disadvantaged young people with access to quality education in the field of Information and
-                Communication Technology (ICT).</p>
-        </div>
-        <div class="about-us">
-            <ul>
-                <li> Mission</li>
-                <li>Valuue</li>
-                <li>History</li>
-                <li>Clubs</li>
-            </ul>
-        </div>
-        <div class="quick-link">
-            <h4>Quick Link</h4>
-            <ul>
-                <li><a class="active link" href="index.html">HOME</a></li>
-                <li><a class="active" href="page/about.html">ABOUT</a></li>
-                <li><a class="active" href="page/contact.html">CONTACT</a></li>
-            </ul>
-        </div>
-        <div class="contact-us">
-            <h4>Contact</h4>
-            <p><i class="fa-solid fa-location-dot" style="color: #ffffff;"></i>BP 511 St. 371 Phum Tropeang Chhuk (Borey Sorla) Sangkat Tek Thla, Khan Sen SokPhnom Penh CAMBODIA</p>
-            <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i>:+855 23 99 55 00</p>  
-            <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i>:info.cambodia@passerellesnumeriques.org</p> 
-        </div>
-    </div>
-    <hr>
-    <div class="media">
-        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-instagram" style="color: #f7f7f7;"></i>
-        <i class="fa-brands fa-telegram" style="color: #fcfcfc;"></i>
-        <p class="new-footer">Contact with us to get information</p>
-    </div>
+
 </html>
